prevent overflow

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -55,6 +55,11 @@
   --doc-sidebar-width: 100%;
 }
 
+#__docusaurus {
+  width: 100%;
+  overflow: clip;
+}
+
 html[data-theme="light"] {
   --ifm-code-background: rgba(0, 0, 0, 0.06);
   --docsearch-container-background: rgba(32, 35, 42, 0.6);
